[gd_scene load_steps=8 format=2]

[ext_resource path="res://Spirtes/Ttitle screen.png" type="Texture" id=1]
[ext_resource path="res://Spirtes/titleBG.png" type="Texture" id=2]
[ext_resource path="res://Spirtes/newGame.png" type="Texture" id=3]
[ext_resource path="res://Spirtes/newGameSelected.png" type="Texture" id=4]
[ext_resource path="res://Spirtes/quitSelected.png" type="Texture" id=5]
[ext_resource path="res://Spirtes/quitGame.png" type="Texture" id=6]
[ext_resource path="res://TitleScreen.gd" type="Script" id=7]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.01053, 1 )
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 40.0
margin_right = 368.0
margin_bottom = 216.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 132.0
margin_top = 20.0
margin_right = 236.0
margin_bottom = 156.0
size_flags_horizontal = 4
custom_constants/separation = 18

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 104.0
margin_bottom = 56.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 21.0
margin_top = 74.0
margin_right = 83.0
margin_bottom = 111.0
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
custom_constants/separation = 19

[node name="newGame" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 62.0
margin_bottom = 9.0
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )

[node name="quit" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 62.0
margin_bottom = 37.0
size_flags_horizontal = 4
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 5 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/newGame" to="." method="_on_newGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
